# renbo_whole_body_plan

./: .gitignore  CMakeLists.txt  package.xml
config/: planning_parameters.yaml  planning_parameters.yaml~
database/: ds_dataset.dat~  goal_1.txt  goal_2.txt  ssc_double_support.dat~
demo/: generate_grasping_posture.cpp  generate_valid_config.cpp  plan_single_path.cpp  plan_single_target.cpp  ss_motion_plan.cpp  visualize_trajectory.cpp  whole_body_plan_demo.cpp
include/renbo_whole_body_plan/: constraint_sampler.h~  double_support_constraint.h  final_pose_planner.h  nlp_ik_solver.h  planning_service.h  renbo_planner.h  rrt_connect_planner.h  stability_checker.h  stable_config_generator.h
launch/: demo_whole_body.launch~  generate_ss_database.launch  moveit_rviz.launch  planning_context_whole_body.launch  planning_context_whole_body.launch~  ss_config_rviz.launch  trajectory_rviz.launch  visualize_trajectory.launch  whole_body_plan.launch  whole_body_plan.launch~
rviz/: rviz.rviz  ss_generator.rviz  trajectory.rviz
scene/: closet_v2.stl  closet_v3.stl  coffeepot.stl  ikea_lack_table.stl  ikea_table.stl  jsk_room.scene  jsk_room_no_floor.scene  mug.stl  pillar.scene  pillar.scene~  table.scene  table.scene~  table_v2.scene  table_v2.scene~
src/: double_support_constraint.cpp  final_pose_planner.cpp  nlp_ik_solver.cpp  planning_node.cpp  planning_service.cpp  renbo_planner.cpp  rrt_connect_planner.cpp  stability_checker.cpp  stable_config_generator.cpp  whole_body_plan_demo.cpp
src/test/: compute_com.cpp  renbo_test_drake.cpp
src/util/: generate_ss_database.cpp
trajectory/: whole_body_trajectory.txt
