<?xml version="1.0"?>
<package>
  <name>renbo_whole_body_plan</name>
  <version>0.0.0</version>
  <description>The whole_body_planning package</description>
  <maintainer email="shtseng@ira.ee.ntu.edu.tw">shtseng</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrl_kinematics</build_depend>
  
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_robot_interaction</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_whole_body_ik</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  
  <build_depend>libpcl-all-dev</build_depend>

  <build_depend>rrt_planner_msgs</build_depend>
  

  <run_depend>hrl_kinematics</run_depend>
  
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_robot_interaction</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>moveit_whole_body_ik</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  
  <run_depend>renbo_moveit_config</run_depend>
  <run_depend>rrt_planner_msgs</run_depend>

  <run_depend>libpcl-all</run_depend>

  <run_depend>message_runtime</run_depend>

</package>
