<?xml version="1.0"?>
<package>
  <name>renbo_whole_body_plan</name>
  <version>0.0.0</version>
  <description>The whole_body_planning package</description>
  <maintainer email="shtseng@ira.ee.ntu.edu.tw">shtseng</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrl_kinematics</build_depend>
  
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>trac_ik_lib</build_depend>  

  <build_depend>drake_ros_systems</build_depend>
  <build_depend>drake_ros_common</build_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <build_depend>rrt_planner_msgs</build_depend>

  <run_depend>hrl_kinematics</run_depend>
  
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  
  <run_depend>renbo_moveit_config</run_depend>
  <run_depend>rrt_planner_msgs</run_depend>

  <run_depend>libpcl-all</run_depend>

  <run_depend>drake_ros_systems</run_depend>
  <run_depend>drake_ros_common</run_depend>

</package>
